Bug 58612 - [4.8/4.9/4.10 Regression] [c++11] ICE calling non-constexpr from constexpr in template class
Summary: [4.8/4.9/4.10 Regression] [c++11] ICE calling non-constexpr from constexpr in...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.9.0
: P5 normal
Target Milestone: 5.0
Assignee: Jason Merrill
URL:
Keywords: error-recovery, ice-on-invalid-code
Depends on:
Blocks: constexpr
  Show dependency treegraph
 
Reported: 2013-10-03 21:48 UTC by Volker Reichelt
Modified: 2014-07-14 05:27 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work: 4.6.0, 4.7.0, 4.8.0, 4.8.1
Known to fail: 4.8.2, 4.9.0
Last reconfirmed: 2014-07-13 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Reichelt 2013-10-03 21:48:59 UTC
The following invalid code snippet (compiled with "-std=c++11") triggers an ICE on the 4.8 branch (since at least 4.8.2 20130920) and trunk:

===============================================
struct A
{
  int foo() const { return 0; }
};

template<typename> struct B
{
  A a;
  constexpr int bar() { return a.foo(); }
};

constexpr int i = B<void>().bar();
===============================================

bug.cc:12:33: error: 'constexpr int B< <template-parameter-1-1> >::bar() const [with <template-parameter-1-1> = void]' called in a constant expression
 constexpr int i = B<void>().bar();
                                 ^
bug.cc:9:17: note: 'constexpr int B< <template-parameter-1-1> >::bar() const [with <template-parameter-1-1> = void]' is not usable as a constexpr function because:
   constexpr int bar() { return a.foo(); }
                 ^
bug.cc:9:17: internal compiler error: Segmentation fault
0xaef62f crash_signal
        ../../gcc/gcc/toplev.c:335
0xcf44ba walk_tree_1(tree_node**, tree_node* (*)(tree_node**, int*, void*), void*, pointer_set_t*, tree_node* (*)(tree_node**, int*, tree_node* (*)(tree_node**, int*, void*), void*, pointer_set_t*))
        ../../gcc/gcc/tree.c:10934
0xcf48e5 walk_tree_1(tree_node**, tree_node* (*)(tree_node**, int*, void*), void*, pointer_set_t*, tree_node* (*)(tree_node**, int*, tree_node* (*)(tree_node**, int*, void*), void*, pointer_set_t*))
        ../../gcc/gcc/tree.c:11191
0x6d0347 break_out_target_exprs(tree_node*)
        ../../gcc/gcc/cp/tree.c:2366
0x6c19eb massage_constexpr_body
        ../../gcc/gcc/cp/semantics.c:6299
0x6c2388 explain_invalid_constexpr_fn(tree_node*)
        ../../gcc/gcc/cp/semantics.c:6462
0x6c2986 cxx_eval_call_expression
        ../../gcc/gcc/cp/semantics.c:6831
0x6c3f4f cxx_eval_constant_expression
        ../../gcc/gcc/cp/semantics.c:7904
0x6c6f66 cxx_eval_outermost_constant_expr
        ../../gcc/gcc/cp/semantics.c:8217
0x5e0c75 store_init_value(tree_node*, tree_node*, vec<tree_node*, va_gc, vl_embed>**, int)
        ../../gcc/gcc/cp/typeck2.c:786
0x557408 check_initializer
        ../../gcc/gcc/cp/decl.c:5728
0x56a2ec cp_finish_decl(tree_node*, tree_node*, bool, tree_node*, int)
        ../../gcc/gcc/cp/decl.c:6347
0x65119f cp_parser_init_declarator
        ../../gcc/gcc/cp/parser.c:16568
0x6518bf cp_parser_simple_declaration
        ../../gcc/gcc/cp/parser.c:10986
0x653740 cp_parser_block_declaration
        ../../gcc/gcc/cp/parser.c:10867
0x65c76e cp_parser_declaration
        ../../gcc/gcc/cp/parser.c:10764
0x65b4da cp_parser_declaration_seq_opt
        ../../gcc/gcc/cp/parser.c:10650
0x65cda6 cp_parser_translation_unit
        ../../gcc/gcc/cp/parser.c:3939
0x65cda6 c_parse_file()
        ../../gcc/gcc/cp/parser.c:28900
0x7707e3 c_common_parse_file()
        ../../gcc/gcc/c-family/c-opts.c:1046
Please submit a full bug report, [etc.]
Comment 1 Jakub Jelinek 2013-10-16 09:49:01 UTC
GCC 4.8.2 has been released.
Comment 2 Richard Biener 2014-05-22 09:03:49 UTC
GCC 4.8.3 is being released, adjusting target milestone.
Comment 3 Jason Merrill 2014-07-14 05:25:57 UTC
Author: jason
Date: Mon Jul 14 05:25:25 2014
New Revision: 212505

URL: https://gcc.gnu.org/viewcvs?rev=212505&root=gcc&view=rev
Log:
	PR c++/58612
	* tree.c (bot_replace): Only replace a dummy 'this' parm.

Added:
    trunk/gcc/testsuite/g++.dg/cpp0x/constexpr-neg3.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/tree.c
Comment 4 Jason Merrill 2014-07-14 05:27:48 UTC
Fixed on trunk.