re PR c++/58612 ([c++11] ICE calling non-constexpr from constexpr in template class)

PR c++/58612
	* tree.c (bot_replace): Only replace a dummy 'this' parm.

From-SVN: r212505